# PAMSimulator

./: .codacy.yaml  .flake8  .gitignore  Makefile  README.md  controller.py  main.py  main.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linux-app.yml  window-app.yml
component/screen/: test_screen.py
config/: constant.py  dir.py
model/: answer.py
static/csv/: exam.csv
static/csv/keyboard_layout/: bopomofo.csv
static/metadata/: default.json
storage/: localStorage.py
tests/: test_config_paths.py  test_models.py  test_storage.py
