[project]
name = "pamsimulator"
version = "1.0.0"
description = "A desktop tool to design and run experiments based on the Perceptual Assimilation Model (PAM)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Tu-Hung Jen" },
    { name = "Daniel Du" },
]
keywords = ["pam", "perceptual-assimilation-model", "linguistics", "psychoacoustics", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

# Runtime dependencies — the only third-party packages actually imported by the app.
# (pandas requires openpyxl to read/write the .xlsx data files in storage/localStorage.py.)
dependencies = [
    "PyQt6>=6.5.2",
    "pydub>=0.25.1",
    "pandas>=2.0.3,<3",
    "openpyxl>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/danghoangnhan/PAMSimulator"
Repository = "https://github.com/danghoangnhan/PAMSimulator"

# PEP 735 dependency groups. `dev` is installed by default with `uv sync`.
[dependency-groups]
dev = [
    "flake8>=7.0",
]
test = [
    "pytest>=8.0",
    "coverage>=7.4",
]
# Tools used to produce standalone executables (see main.spec).
build = [
    "pyinstaller>=6.0",
]

[tool.uv]
# This is an application, not a library to be published, so uv should not try to
# build/install it as a package; run it with `uv run python main.py`.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
